# digifirma

./: .gitignore  Cargo.toml  README.md  build.rs
src/: ca.rs  fix_store.c  http_client.rs  lib.rs  nid_mapping.rs  verify.rs
