[package]
name = "digifirma"
version = "0.1.0"
authors = ["Eugenio Tampieri <eugenio@eutampieri.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = "2"
httpstatus = "0.1"
openssl = "0.10"
xml-rs = "0.8"
codice_fiscale = "0.3"
lazy_static = "1"
[build-dependencies]
cc = "1.0"
foreign-types = "0.5"
